added placeholder for html site

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -64,7 +64,17 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div style="display: flex; justify-content: center;">
+      <div
+        style="font-family: sans-serif; width: 100%; max-width: 1200px; margin-top: 3rem; margin-left: 1.5rem; margin-right: 1.5rem">
+        <h1 style="margin-bottom: 0; font-size: 3rem; font-weight: 500;">CITIES DASHBOARD</h2>
+          <p style="opacity: 0.7; margin-top: 0;">Data repository and visualization on sustainability and well-being at
+            NYU Abu
+            Dhabi</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
